--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "example": "examples"
   },
   "scripts": {
-    "prepublish": "babel --plugins 'transform-es2015-modules-umd' src --out-dir ./dist"
+    "prepublish": "babel --plugins 'transform-es2015-modules-umd' src --out-dir ./dist",
+    "test": "mocha --compilers js:babel-core/register",
+    "test:pre": "npm run prepublish && npm run test"
   },
   "repository": {
     "type": "git",
@@ -25,7 +27,11 @@
     "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-2": "^6.5.0"
+    "babel-preset-stage-2": "^6.5.0",
+    "chai": "^3.5.0",
+    "jsdom": "^9.8.3",
+    "mocha": "^3.2.0",
+    "mocha-jsdom": "^1.1.0"
   },
   "dependencies": {
     "babel-runtime": "^6.6.1"
