--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "babel-preset-stage-2": "^6.5.0",
     "chai": "^3.5.0",
     "jsdom": "^9.8.3",
-    "mocha": "^3.2.0",
-    "mocha-jsdom": "^1.1.0"
+    "mocha": "^3.2.0"
   },
   "dependencies": {
     "babel-runtime": "^6.6.1"
